fixed profile hover tile size and heading alignment

--- a/media/css/popover.css
+++ b/media/css/popover.css
@@ -14,7 +14,7 @@
 	left:0;
 	z-index:1010;
 	display:none;
-	max-width:300px;
+	width:350px;
 	padding:1px;
 	text-align:left;
 	white-space:normal;
