--- a/media/sass/_userpages.scss
+++ b/media/sass/_userpages.scss
@@ -276,8 +276,7 @@ ul.errorlist.nonfield {
 	text-transform: none;
 }
 
-.username-hover h2,
-.question .username-hover h2 {
+.popover .page-heading {
 	text-align: center;
 	margin-bottom: 0;
 }
